--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gg13-tw-dropdown",
+  "name": "gg13-transition-fade",
   "version": "0.0.1",
-  "description": "GG13 Counter",
+  "description": "simple fade in/out transition based on a boolean prop",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
@@ -16,8 +16,8 @@
   "keywords": [
     "react",
     "typescript",
-    "tailwind",
-    "dropdown"
+    "fade",
+    "transition"
   ],
   "license": "MIT",
   "scripts": {
